--- a/ASPNET/BoxOfficeMovie/Pages/_ViewImports.cshtml
+++ b/ASPNET/BoxOfficeMovie/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using BoxOfficMoive
-@namespace BoxOfficMoive.Pages
+@using BoxOfficMovie
+@namespace BoxOfficMovie.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
